--- a/offsite.html
+++ b/offsite.html
@@ -119,51 +119,58 @@
 
                         </div>
                     </div>
+                    <center>
+                        <p style="font-size:13px; color:red;">** การขออนุญาตใช้สำหรับออกนอกสถานที่ไม่เกิน 4 ชั่วโมง **</p>
+                    </center>
 
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label">ระหว่างเวลา</label>
                         <div class="col-sm-8">
                             <select type="text" class="form-control" id="ran5" name="ระหว่างเวลา" placeholder="">
-                                <option value="08.30">08.30</option>
-                                <option value="09.00">09.00</option>
-                                <option value="09.30">09.30</option>
-                                <option value="10.00">10.00</option>
-                                <option value="10.30">10.30</option>
-                                <option value="11.00">11.00</option>
-                                <option value="11.30">11.30</option>
-                                <option value="12.00">12.00</option>
-                                <option value="13.00">13.00</option>
-                                <option value="13.30">13.30</option>
-                                <option value="14.00">14.00</option>
-                                <option value="14.30">14.30</option>
-                                <option value="15.00">15.00</option>
-                                <option value="15.30">15.30</option>
-                                <option value="16.00">16.00</option>
-                                <option value="16.30">16.30</option>
+                                <option value="08:30">08:30</option>
+                                <option value="09:00">09:00</option>
+                                <option value="09:30">09:30</option>
+                                <option value="10:00">10:00</option>
+                                <option value="10:30">10:30</option>
+                                <option value="11:00">11:00</option>
+                                <option value="11:30">11:30</option>
+                                <option value="12:00">12:00</option>
+                                <option value="11:30">12:30</option>
+                                <option value="13:00">13:00</option>
+                                <option value="13:30">13:30</option>
+                                <option value="14:00">14:00</option>
+                                <option value="14:30">14:30</option>
+                                <option value="15:00">15:00</option>
+                                <option value="15:30">15:30</option>
+                                <option value="16:00">16:00</option>
+                                <option value="16:30">16:30</option>
                             </select>
                         </div>
                     </div>
+
+
 
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label">ถึงเวลา</label>
                         <div class="col-sm-8">
                             <select type="text" class="form-control" id="ran6" name="ถึงเวลา" placeholder="">
-                                <option value="08.30">08.30</option>
-                                <option value="09.00">09.00</option>
-                                <option value="09.30">09.30</option>
-                                <option value="10.00">10.00</option>
-                                <option value="10.30">10.30</option>
-                                <option value="11.00">11.00</option>
-                                <option value="11.30">11.30</option>
-                                <option value="12.00">12.00</option>
-                                <option value="13.00">13.00</option>
-                                <option value="13.30">13.30</option>
-                                <option value="14.00">14.00</option>
-                                <option value="14.30">14.30</option>
-                                <option value="15.00">15.00</option>
-                                <option value="15.30">15.30</option>
-                                <option value="16.00">16.00</option>
-                                <option value="16.30">16.30</option>
+                                <option value="08:30">08:30</option>
+                                <option value="09:00">09:00</option>
+                                <option value="09:30">09:30</option>
+                                <option value="10:00">10:00</option>
+                                <option value="10:30">10:30</option>
+                                <option value="11:00">11:00</option>
+                                <option value="11:30">11:30</option>
+                                <option value="12:00">12:00</option>
+                                <option value="11:30">12:30</option>
+                                <option value="13:00">13:00</option>
+                                <option value="13:30">13:30</option>
+                                <option value="14:00">14:00</option>
+                                <option value="14:30">14:30</option>
+                                <option value="15:00">15:00</option>
+                                <option value="15:30">15:30</option>
+                                <option value="16:00">16:00</option>
+                                <option value="16:30">16:30</option>
                             </select>
                         </div>
                     </div>
@@ -298,6 +305,10 @@
                                     </div>
 
                                     <div class="modal-footer">
+
+                                        <p style="font-size:13px; color:red;"> *** การบันทึกข้อมูลจะใช้เวลาประมาณ 10
+                                            วินาที กรุณารอสักครู่ เมื่อเสร็จแล้วจะมีข้อความแจ้งเตือน ***</p>
+
                                         <button type="button" class="btn btn-secondary btn-block "
                                             data-bs-dismiss="modal">แก้ไขข้อมูล</button>
 
@@ -305,7 +316,7 @@
                                             name="FormleavesickButton" style="margin-bottom: 3px;"><i
                                                 class="fas fa-sign-out-alt"></i>บันทึกข้อมูล</button>
 
-                                        <p style="font-size:13px; color:red;"> *** การบันทึกข้อมูลจะใช้เวลาประมาณ 10 วินาที กรุณารอสักครู่ เมื่อเสร็จแล้วจะมีข้อความแจ้งเตือน ***</p>
+
                                     </div>
                                 </div>
                             </div>
