--- a/test.html
+++ b/test.html
@@ -2,48 +2,50 @@
 <html lang="en">
 
 <head>
-	<base target="_top">
-	<title> กลุ่มวิจัยวิศวกรรมหลังการเก็บเกี่ยว </title>
-	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
 
+    <!-- <base target="_top"> -->
+    <title>แบบขออนุญาตออกนอกสถานที่ในเวลาราชการ</title>
+    <link rel="shortcut icon">
 
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta http-equiv="x-ua-compatible" content="ie=edge">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
+    <!-- Font Awesome Icons -->
+    <link rel="stylesheet" href="plugins/fontawesome-free/css/all.min.css">
 
+    <!-- DataTables -->
+    <link rel="stylesheet" href="plugins/datatables-bs4/css/dataTables.bootstrap4.min.css">
+    <link rel="stylesheet" href="plugins/datatables-responsive/css/responsive.bootstrap4.min.css">
+    <!-- Select2 -->
+    <link rel="stylesheet" href="plugins/select2/css/select2.min.css" />
+    <link rel="stylesheet" href="plugins/select2-bootstrap4-theme/select2-bootstrap4.min.css" />
+    <!-- Theme style **โครงสร้าง** -->
+    <link rel="stylesheet" href="dist/css/adminlte.css">
 
-	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
-	<!-- Font Awesome Icons -->
-	<link rel="stylesheet" href="plugins/fontawesome-free/css/all.min.css">
+    <link rel="stylesheet" href="dist/css/bootstrap.min.css">
 
-	<!-- DataTables -->
-	<link rel="stylesheet" href="plugins/datatables-bs4/css/dataTables.bootstrap4.min.css">
-	<link rel="stylesheet" href="plugins/datatables-responsive/css/responsive.bootstrap4.min.css">
-	<!-- Select2 -->
-	<link rel="stylesheet" href="plugins/select2/css/select2.min.css" />
-	<link rel="stylesheet" href="plugins/select2-bootstrap4-theme/select2-bootstrap4.min.css" />
-	<!-- Theme style -->
-	<link rel="stylesheet" href="dist/css/adminlte.css">
-	<!-- Google Font: Source Sarabun -->
-	<link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@100;300;500;700&amp;display=swap"
-		rel="stylesheet">
+    <link rel="stylesheet" href="dist/css/sweetalert.min.css">
 
+    <!-- Google Font: Source Sarabun -->
+    <link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@100;300;500;700&amp;display=swap"
+        rel="stylesheet">
 
-	<style>
-		/* Chrome, Safari, Edge, Opera */
-		input::-webkit-outer-spin-button,
-		input::-webkit-inner-spin-button {
-			-webkit-appearance: none;
-			margin: 0;
-		}
+    <!--
+    <style>
+        /* Chrome, Safari, Edge, Opera */
+        input::-webkit-outer-spin-button,
+        input::-webkit-inner-spin-button {
+            -webkit-appearance: none;
+            margin: 0;
+        }
 
-		/* Firefox */
-		input[type=number] {
-			-moz-appearance: textfield;
-		}
-	</style>
-
-
+        /* Firefox */
+        input[type=number] {
+            -moz-appearance: textfield;
+        }
+    </style>
+    -->
 
 </head>
 
@@ -79,8 +81,20 @@
 
 
 
-	<script src="js/userapi.js"></script>
+	<script src="js/test.js"></script>
 	<script>
+		Loading()
+		function Loading() {
+			setTimeout(function () {
+				swal({
+					title: "กำลังบันทึกข้อมูล",
+					//text: "คำเนินการต่อ",
+					//type: "success",
+				})
+			});
+		};
+
+
 
 	</script>
 </body>
