--- a/home.html
+++ b/home.html
@@ -7,6 +7,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
     <base target="_top">
+    <title>Home</title>
     <link rel="shortcut icon">
 
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
@@ -71,21 +72,27 @@
 
                     <div class="row justify-content-around">
 
-                        <!--
+                        <!-- leave-sick.html -->
                         <div class="col-12 mt-3">
-                            <a href="leave-sick.html"><button class="btn btn-light btn-block " type="button">
-                                    <i class="fas fa-receipt"> </i> ใบลาป่วย / ใบลากิจ </button></a>
+                            <a href=""><button class="btn btn-light btn-block" type="button">
+                                    </i> TEST ใบลาป่วย / ใบลากิจ (ปิดการใช้งาน)</button></a>
                         </div>
 
+                        <!-- leave-sacation.html -->
                         <div class="col-12 mt-3">
-                            <a href="leave-sacation.html"><button class="btn btn-light btn-block " type="button">
-                                    <i class="fas fa-receipt"> </i> ใบลาพักผ่อน </button></a>
+                            <a href=""><button class="btn btn-light btn-block" type="button">
+                                    </i> TEST ใบลาพักผ่อน (ปิดการใช้งาน)</button></a>
                         </div>
-                        -->
+
 
                         <div class="col-12 mt-3">
                             <a href="offsite.html"><button class="btn btn-secondary btn-block" type="button">
                                     </i> ใบขออนุญาตออกนอกสถานที่ </button></a>
+                        </div>
+
+                        <div class="col-12 mt-3">
+                            <a href="menu-pdf.html"><button class="btn btn-secondary btn-block" type="button">
+                                    </i> Drive PDF File </button></a>
                         </div>
                         <!--//icon //<i class="fas fa-receipt"></i> //-->
 
