--- a/leave-sick.html
+++ b/leave-sick.html
@@ -30,7 +30,7 @@
 
     <!-- Google Font: Source Sarabun -->
     <link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@100;300;500;700&amp;display=swap"
-        rel="stylesheet"> 
+        rel="stylesheet">
 
 
 
@@ -39,7 +39,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script> -->
 
 
-    <style>
+    <!-- <style>
         /* Chrome, Safari, Edge, Opera */
         input::-webkit-outer-spin-button,
         input::-webkit-inner-spin-button {
@@ -51,7 +51,7 @@
         input[type=number] {
             -moz-appearance: textfield;
         }
-    </style>
+    </style> -->
 
 </head>
 
@@ -181,11 +181,29 @@
                             <select type="text" class="form-control" id="ran8" name="ผู้อนุมัติ" placeholder=""
                                 required="required">
                                 <option value="นายอนุชิต ฉ่ำสิงห์">นายอนุชิต ฉ่ำสิงห์</option>
-                                <option value="นายณัฐสิทธิ์ อยู่เย็น">นายณัฐสิทธิ์ อยู่เย็น (ปฏิบัติราชการแทน)</option>
-                                <option value="นางสาวปรีดาวรรณ ไชยศรีชลธาร">นางสาวปรีดาวรรณ ไชยศรีชลธาร
-                                    (ปฏิบัติราชการแทน)</option>
+                                <option value="นางสาวปรีดาวรรณ ไชยศรีชลธาร">นางสาวปรีดาวรรณ
+                                    ไชยศรีชลธาร (ปฏิบัติราชการแทน)</option>
                                 <option value="นายปรีชา อานันท์รัตนกุล">นายปรีชา อานันท์รัตนกุล (ปฏิบัติราชการแทน)
                                 </option>
+                                <option value="ป-นายจิรวัสส์ เจียตระกูล">นายจิรวัสส์ เจียตระกูล (ปฏิบัติราชการแทน)
+                                </option>
+                                <option value="ป-นายปริญญวัฒน์ อยู่ทองอินทร์">นายปริญญวัฒน์
+                                    อยู่ทองอินทร์ (ปฏิบัติราชการแทน)</option>
+                                <option value="ป-นายคชธร อ่างบุญพงษ์">นายคชธร อ่างบุญพงษ์ (ปฏิบัติราชการแทน)</option>
+                                <option value="ป-นายณัฐสิทธิ์ อยู่เย็น">นายณัฐสิทธิ์ อยู่เย็น (ปฏิบัติราชการแทน)
+                                </option>
+                                <option value="ป-นายสุรชาติ ระย้าทอง">สุรชาติ ระย้าทอง (ปฏิบัติราชการแทน)</option>
+                                <option value="ร-นางสาวปรีดาวรรณ ไชยศรีชลธาร">นางสาวปรีดาวรรณ ไชยศรีชลธาร (รักษาการแทน)
+                                </option>
+                                <option value="ร-นายปรีชา อานันท์รัตนกุล">นายปรีชา อานันท์รัตนกุล (รักษาการแทน)</option>
+                                <option value="ร-นายจิรวัสส์ เจียตระกูล">นายจิรวัสส์ เจียตระกูล (รักษาการแทน)</option>
+                                <option value="ร-นายปริญญวัฒน์ อยู่ทองอินทร์">นายปริญญวัฒน์ อยู่ทองอินทร์ (รักษาการแทน)
+                                </option>
+                                <option value="ร-นายคชธร อ่างบุญพงษ์">นายคชธร อ่างบุญพงษ์ (รักษาการแทน)</option>
+                                <option value="ร-นายณัฐสิทธิ์ อยู่เย็น">นายณัฐสิทธิ์ อยู่เย็น (รักษาการแทน)</option>
+                                <option value="ร-นายสุรชาติ ระย้าทอง">สุรชาติ ระย้าทอง (รักษาการแทน)</option>
+                                <option value="นายอัคคพล เสนาณรงค์">นายอัคคพล
+                                    เสนาณรงค์(ผู้อำนวยการสถาบันวิจัยเกษตรวิศวกรรม)</option>
 
                             </select>
                         </div>
