add text Version form login

--- a/login.html
+++ b/login.html
@@ -100,7 +100,7 @@
 								<option value="นายเลียด ผลสุก">นายเลียด ผลสุก</option>
 								<option value="นายสมบัติ ความคุ้นเคย">นายสมบัติ ความคุ้นเคย</option>
 								<option value="นายทศพร สิงหชัย">นายทศพร สิงหชัย</option>
-								<option value="น.ส.กัญญาวีร์ รวมพวก">น.ส.กัญญาวีร์ รวมพวก</option>							
+								<option value="น.ส.กัญญาวีร์ รวมพวก">น.ส.กัญญาวีร์ รวมพวก</option>
 							</select>
 						</div>
 					</div>
@@ -119,11 +119,15 @@
 								name="LoginButton" style="margin-bottom: 5px;"><i class="fas fa-sign-in-alt"></i>
 								เข้าสู่ระบบ</button>
 
-							<a href="***PDF***.pdf"><button class="btn btn-light btn-block " type="button"><i
-										class="fa fa-bookmark"></i> คู่มือการใช้งานระบบ</button></a>
+							<a href=""><button class="btn btn-light btn-block "
+									type="button">คู่มือการใช้งานระบบ</button></a>
 						</div>
 
 					</div>
+					<center>
+						<p style="color:red;"> Version 1.0.58 </p>
+					</center>
+
 				</form>
 			</div>
 		</div>
